--- a/index.html
+++ b/index.html
@@ -15,16 +15,27 @@
   </style>
 </head>
 <body>
+  <main>
+    <img src="./images/image-equilibrium.jpg" alt="">
+    <h1>Equilibrium #3429</h1>
+    <p>Our Equilibrium collection promotes balance and calm.</p>
 
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
+    <div>
+      <div class="ethereum">
+        <img src="./images/icon-ethereum.svg" alt="">
+        <span>0.041 ETH</span>
+      </div>
+      <div class="days">
+        <img src="./images/icon-clock.svg" alt="">
+        <span>3 days left</span>
+        <div class="linha"></div>
+        <div class="creditos">
+          <img src="./images/image-avatar.png" alt="">
+          <p>Creation of <span>Jules Wyvern</span></p>
+        </div>
+      </div>
+    </div>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
